--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <option>Pegs 2</option>
             <option>Pegs 3</option>
             <option>Pegs 4</option>
+			<option>Pegs 5</option>
+			<option>Pegs 6</option>
         </select>
         <input type="button" onclick="selectMultiple()" value="Select multiple">
     </form>
